; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_cpcap-battery.c_cpcap_battery_get_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_cpcap-battery.c_cpcap_battery_get_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpcap_battery_state_data = type { i32 }
%struct.cpcap_battery_ddata = type { %struct.cpcap_battery_state_data* }

@CPCAP_BATTERY_STATE_NR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cpcap_battery_state_data* (%struct.cpcap_battery_ddata*, i32)* @cpcap_battery_get_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cpcap_battery_state_data* @cpcap_battery_get_state(%struct.cpcap_battery_ddata* %0, i32 %1) #0 {
  %3 = alloca %struct.cpcap_battery_state_data*, align 8
  %4 = alloca %struct.cpcap_battery_ddata*, align 8
  %5 = alloca i32, align 4
  store %struct.cpcap_battery_ddata* %0, %struct.cpcap_battery_ddata** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @CPCAP_BATTERY_STATE_NR, align 4
  %8 = icmp uge i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store %struct.cpcap_battery_state_data* null, %struct.cpcap_battery_state_data** %3, align 8
  br label %17

10:                                               ; preds = %2
  %11 = load %struct.cpcap_battery_ddata*, %struct.cpcap_battery_ddata** %4, align 8
  %12 = getelementptr inbounds %struct.cpcap_battery_ddata, %struct.cpcap_battery_ddata* %11, i32 0, i32 0
  %13 = load %struct.cpcap_battery_state_data*, %struct.cpcap_battery_state_data** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds %struct.cpcap_battery_state_data, %struct.cpcap_battery_state_data* %13, i64 %15
  store %struct.cpcap_battery_state_data* %16, %struct.cpcap_battery_state_data** %3, align 8
  br label %17

17:                                               ; preds = %10, %9
  %18 = load %struct.cpcap_battery_state_data*, %struct.cpcap_battery_state_data** %3, align 8
  ret %struct.cpcap_battery_state_data* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
